# botcrit

./: .botbox.json  .botbox.toml  .edict.toml  .gitignore  .maw.toml  .sealignore  AGENTS.md  Cargo.toml  Justfile  README.md  USABILITY_REPORT.md  spec.md  testing.md
.agents/botbox/: dev-loop.txt  last-iteration.txt
.agents/botbox/hooks/: .hooks-version  claim-agent.sh
.agents/botbox/scripts/: reviewer-loop.mjs
.agents/edict/: last-iteration.txt
.beads/: issues.jsonl
.bones/events/: 2026-02.events
.botbus/: agents.jsonl
.botbus/channels/: general.jsonl
.claude/: settings.json
.claude/hooks/: init-agent.sh
.crit/: events.jsonl
.crit/reviews/cr-1s0w/: events.jsonl
.crit/reviews/cr-2p5j/: events.jsonl
.crit/reviews/cr-2pcy/: events.jsonl
.crit/reviews/cr-2u3u/: events.jsonl
.crit/reviews/cr-5a4g/: events.jsonl
.crit/reviews/cr-5tjx/: events.jsonl
.crit/reviews/cr-6v49/: events.jsonl
.crit/reviews/cr-kex3/: events.jsonl
.crit/reviews/cr-mc5c/: events.jsonl
.crit/reviews/cr-p8ye/: events.jsonl
.crit/reviews/cr-v486/: events.jsonl
.crit/reviews/cr-ycub/: events.jsonl
.seal/: orphaned-reviews-20260204-050004.json
.seal/reviews/cr-1tvj/: events.jsonl
.seal/reviews/cr-21wy/: events.jsonl
.seal/reviews/cr-2g4r/: events.jsonl
.seal/reviews/cr-2pcy/: events.jsonl
.seal/reviews/cr-2qzh/: events.jsonl
.seal/reviews/cr-2yyo/: events.jsonl
.seal/reviews/cr-2zr0/: events.jsonl
.seal/reviews/cr-3050/: events.jsonl
.seal/reviews/cr-32bk/: events.jsonl
.seal/reviews/cr-3d79/: events.jsonl
.seal/reviews/cr-cih6/: events.jsonl
.seal/reviews/cr-fggm/: events.jsonl
.seal/reviews/cr-fm38/: events.jsonl
.seal/reviews/cr-k5yx/: events.jsonl
.seal/reviews/cr-kbhq/: events.jsonl
.seal/reviews/cr-kex3/: events.jsonl
.seal/reviews/cr-n4tl/: events.jsonl
.seal/reviews/cr-tba2/: events.jsonl
.seal/reviews/cr-xezz/: events.jsonl
crates/crit-cli/: Cargo.toml
crates/crit-cli/src/: lib.rs  main.rs  telemetry.rs
crates/crit-cli/src/cli/: mod.rs
crates/crit-cli/src/cli/commands/: comments.rs  doctor.rs  helpers.rs  init.rs  migrate.rs  reviews.rs  status.rs  sync.rs  threads.rs
crates/crit-cli/src/output/: mod.rs
crates/crit-core/: Cargo.toml
crates/crit-core/src/: lib.rs  version.rs
crates/crit-core/src/core/: comments.rs  errors.rs  inbox.rs  mod.rs  reviews.rs  sync.rs  threads.rs
crates/crit-core/src/events/: identity.rs  ids.rs
crates/crit-core/src/projection/: mod.rs  query.rs
crates/crit-core/src/scm/: git.rs  mod.rs
crates/crit-tui/: Cargo.toml
crates/crit-tui/src/: app.rs  core_client.rs  db.rs  lib.rs  theme.rs  ui.rs
crates/crit-tui/src/view/: components.rs
crates/crit-tui/src/view/diff/: helpers.rs
crates/crit-tui/src/views/: review_detail.rs  review_list.rs
crates/seal-cli/: Cargo.toml
crates/seal-cli/src/: lib.rs  main.rs  telemetry.rs
crates/seal-cli/src/cli/: mod.rs
crates/seal-cli/src/cli/commands/: agents.rs  comments.rs  doctor.rs  helpers.rs  init.rs  migrate.rs  reviews.rs  status.rs  sync.rs  threads.rs
crates/seal-cli/src/output/: mod.rs
crates/seal-core/: Cargo.toml
crates/seal-core/src/: lib.rs  version.rs
crates/seal-core/src/core/: comments.rs  errors.rs  mod.rs  reviews.rs  sync.rs  threads.rs
crates/seal-core/src/events/: identity.rs  mod.rs
crates/seal-core/src/jj/: context.rs  drift.rs  mod.rs
crates/seal-core/src/log/: mod.rs
crates/seal-core/src/projection/: mod.rs
crates/seal-core/src/scm/: git.rs  jj.rs  mod.rs
crates/seal-tui/: Cargo.toml
crates/seal-tui/src/: config.rs  core_client.rs  db.rs  input.rs  lib.rs  markdown.rs  model.rs  stream.rs  syntax.rs  update.rs
crates/seal-tui/src/theme/: mod.rs
crates/seal-tui/src/view/: comment_editor.rs  components.rs  review_detail.rs  review_list.rs
crates/seal-tui/src/view/diff/: comments.rs  context.rs  mod.rs
docs/: botcrit-ui-transition.md  crate-split-migration.md  crit-core-crate-boundaries.md  demo.md  seal-core-crate-boundaries.md
notes/: git-support-plan.md  jj-research.md  sqlite-schema.sql  v2-architecture.md
scripts/: generate-demo-git.sh  generate-demo-jj.sh  generate-demo.sh  screenshot-demo.sh
src/: critignore.rs  lib.rs  main.rs  sealignore.rs  telemetry.rs
src/cli/: mod.rs
src/cli/commands/: agents.rs  comments.rs  doctor.rs  helpers.rs  init.rs  migrate.rs  mod.rs  reviews.rs  status.rs  sync.rs  threads.rs
src/events/: identity.rs  ids.rs  mod.rs
src/jj/: context.rs  drift.rs  mod.rs
src/log/: mod.rs
src/output/: mod.rs
src/projection/: mod.rs  query.rs
src/scm/: mod.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
src/tui/views/: mod.rs  review_detail.rs  review_list.rs
