[package]
name = "crit"
version = "0.1.0"
edition = "2021"
description = "Agent-centric distributed code review tool for jj"
license = "MIT"

[[bin]]
name = "crit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
fs2 = "0.4.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toon = "0.1.2"
uuid = { version = "1.20.0", features = ["v4"] }
which = "8.0.0"

[dev-dependencies]
tempfile = "3.24.0"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
# maybe
suspicious = { level = "warn", priority = -2 }
complexity = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }
style = { level = "warn", priority = -2 }
